--- a/01/P01a.ipynb
+++ b/01/P01a.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c28e3db0",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,6 @@
     "        b, g, r = img[y, x]\n",
     "        img_copy = img.copy()\n",
     "\n",
-    "        # Texto con borde\n",
     "        cv.putText(img_copy, f\"R={r}\", (230, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
     "                   0.7, (0, 0, 0), 4, cv.LINE_AA)\n",
     "        cv.putText(img_copy, f\"G={g}\", (120, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
@@ -45,12 +44,12 @@
     "        cv.putText(img_copy, f\"B={b}\", (10, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
     "                   0.7, (255, 0, 0), 2, cv.LINE_AA)\n",
     "\n",
-    "        cv.imshow('Imagen', img_copy)\n",
+    "        cv.imshow('Image', img_copy)\n",
     "\n",
     "img = cv.imread('images/eii.png')\n",
     "\n",
-    "cv.imshow('Imagen', img)\n",
-    "cv.setMouseCallback('Imagen', mouse)\n",
+    "cv.imshow('Image', img)\n",
+    "cv.setMouseCallback('Image', mouse)\n",
     "\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
