--- a/01/P01b.ipynb
+++ b/01/P01b.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ee9c31fa",
    "metadata": {},
    "outputs": [
@@ -24,8 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "👉 Usa los sliders para cambiar figura, color y grosor.\n",
+      "Usa los sliders para cambiar figura, color y grosor.\n",
       "Figura: 0=Línea, 1=Rectángulo, 2=Círculo\n",
       "ESC para salir.\n"
      ]
@@ -33,9 +32,10 @@
    ],
    "source": [
     "import cv2 as cv\n",
-    "import numpy as np\n",
+    "import os\n",
     "\n",
-    "# --- Cargar imagen ---\n",
+    "os.makedirs(\"output\", exist_ok=True)\n",
+    "\n",
     "file = 'images/eii.png'\n",
     "image = cv.imread(file)\n",
     "if image is None:\n",
@@ -45,23 +45,19 @@
     "drawing = False\n",
     "ix, iy = -1, -1\n",
     "\n",
-    "# --- Ventana principal ---\n",
-    "cv.namedWindow(\"Editor\")\n",
     "\n",
-    "# --- Funciones de trackbars ---\n",
-    "def nothing(x):\n",
-    "    pass\n",
+    "cv.namedWindow(\"Editor\", cv.WINDOW_AUTOSIZE)\n",
     "\n",
-    "# Trackbar para la figura (0=linea, 1=rect, 2=circle)\n",
+    "# Trackbars\n",
+    "def nothing(x): pass\n",
+    "\n",
     "cv.createTrackbar(\"Figura\", \"Editor\", 0, 2, nothing)\n",
-    "# Trackbars para el color BGR\n",
     "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
-    "# Trackbar para grosor\n",
     "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 10, nothing)\n",
     "\n",
-    "# --- Función de dibujo con ratón ---\n",
+    "\n",
     "def draw(event, x, y, flags, param):\n",
     "    global ix, iy, drawing, canvas, image\n",
     "\n",
@@ -75,18 +71,16 @@
     "    if event == cv.EVENT_LBUTTONDOWN:\n",
     "        drawing = True\n",
     "        ix, iy = x, y\n",
-    "\n",
     "    elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
     "        temp = image.copy()\n",
-    "        if figura == 0:   # línea\n",
+    "        if figura == 0:\n",
     "            cv.line(temp, (ix, iy), (x, y), color, thickness)\n",
-    "        elif figura == 1: # rectángulo\n",
+    "        elif figura == 1:\n",
     "            cv.rectangle(temp, (ix, iy), (x, y), color, thickness)\n",
-    "        elif figura == 2: # círculo\n",
+    "        elif figura == 2:\n",
     "            radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
     "            cv.circle(temp, (ix, iy), radius, color, thickness)\n",
     "        canvas = temp\n",
-    "\n",
     "    elif event == cv.EVENT_LBUTTONUP:\n",
     "        drawing = False\n",
     "        if figura == 0:\n",
@@ -98,18 +92,21 @@
     "            cv.circle(image, (ix, iy), radius, color, thickness)\n",
     "        canvas = image.copy()\n",
     "\n",
-    "# Asociar el callback\n",
+    "\n",
     "cv.setMouseCallback(\"Editor\", draw)\n",
     "\n",
-    "print(\"\\n👉 Usa los sliders para cambiar figura, color y grosor.\")\n",
+    "print(\"Usa los sliders para cambiar figura, color y grosor.\")\n",
     "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo\")\n",
     "print(\"ESC para salir.\")\n",
     "\n",
-    "# Loop principal\n",
+    "\n",
     "while True:\n",
     "    cv.imshow(\"Editor\", canvas)\n",
-    "    if cv.waitKey(1) & 0xFF == 27:  # ESC\n",
+    "    if cv.waitKey(1) & 0xFF == 27:\n",
     "        break\n",
+    "\n",
+    "output_path = \"output/dibujo_1b.png\"\n",
+    "cv.imwrite(output_path, image)\n",
     "\n",
     "cv.destroyAllWindows()\n"
    ]
