--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -5,12 +5,17 @@
    "id": "91fbb9a6",
    "metadata": {},
    "source": [
-    "# Práctica 1 opcional"
+    "# Práctica 1 opcional\n",
+    "Mejoras del programa: \n",
+    "- Permitir crear figuras rellenas (seleccionar a través de la interfaz). \n",
+    "- Poder crear otras primitivas (construir polilíneas y polígonos, elipses...) \n",
+    "- Guardar el dibujo como un vídeo para ver cómo se realizó paso a paso \n",
+    "- Aportación propia "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb1f0733",
    "metadata": {},
    "outputs": [
@@ -18,11 +23,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sliders: figura, color, grosor, relleno\n",
-      "0=Línea,1=Rect,2=Círculo,3=Polilínea,4=Polígono\n",
+      "Usa los sliders para cambiar figura, color, grosor y relleno.\n",
+      "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\n",
       "Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\n",
       "Tecla C = limpiar canvas\n",
-      "ESC = salir\n"
+      "ESC para salir.\n"
      ]
     }
    ],
@@ -33,31 +38,30 @@
     "\n",
     "os.makedirs(\"output\", exist_ok=True)\n",
     "\n",
-    "# --- Cargar imagen ---\n",
     "file = 'images/eii.png'\n",
     "image = cv.imread(file)\n",
     "if image is None:\n",
     "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
     "\n",
-    "# Imagen original de referencia\n",
     "original = image.copy()\n",
     "canvas = image.copy()\n",
     "drawing = False\n",
     "ix, iy = -1, -1\n",
     "points = []  # para polilíneas y polígonos\n",
     "\n",
-    "# --- Ventana principal ---\n",
+    "\n",
     "cv.namedWindow(\"Editor\", cv.WINDOW_AUTOSIZE)\n",
     "\n",
-    "# --- Trackbars ---\n",
+    "# Trackbars\n",
     "def nothing(x): pass\n",
     "\n",
-    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 4, nothing)  # 0=linea,1=rect,2=circle,3=polyline,4=polygon\n",
+    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 4, nothing)\n",
     "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
     "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 20, nothing)\n",
     "cv.createTrackbar(\"Relleno\", \"Editor\", 0, 1, nothing)\n",
+    "\n",
     "\n",
     "def draw(event, x, y, flags, param):\n",
     "    global ix, iy, drawing, canvas, image, points\n",
@@ -67,14 +71,13 @@
     "    g = cv.getTrackbarPos(\"G\", \"Editor\")\n",
     "    r = cv.getTrackbarPos(\"R\", \"Editor\")\n",
     "    color = (b, g, r)\n",
-    "\n",
     "    thickness = cv.getTrackbarPos(\"Grosor\", \"Editor\")\n",
     "    relleno = cv.getTrackbarPos(\"Relleno\", \"Editor\")\n",
     "\n",
     "    if figura not in [0,3] and relleno == 1:\n",
     "        thickness = -1\n",
     "\n",
-    "    # --------- Dibujos normales ----------\n",
+    "\n",
     "    if figura in [0,1,2]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            drawing = True\n",
@@ -86,9 +89,9 @@
     "            elif figura == 1:\n",
     "                cv.rectangle(temp, (ix, iy), (x, y), color, thickness)\n",
     "            elif figura == 2:\n",
-    "                radius = int(((x-ix)**2 + (y-iy)**2)**0.5)\n",
+    "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
     "                cv.circle(temp, (ix, iy), radius, color, thickness)\n",
-    "            canvas[:] = temp\n",
+    "            canvas[:] = temp # importante para guardar el proceso\n",
     "        elif event == cv.EVENT_LBUTTONUP:\n",
     "            drawing = False\n",
     "            if figura == 0:\n",
@@ -96,17 +99,15 @@
     "            elif figura == 1:\n",
     "                cv.rectangle(image, (ix, iy), (x, y), color, thickness)\n",
     "            elif figura == 2:\n",
-    "                radius = int(((x-ix)**2 + (y-iy)**2)**0.5)\n",
+    "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
     "                cv.circle(image, (ix, iy), radius, color, thickness)\n",
     "            canvas[:] = image.copy()\n",
-    "\n",
-    "    # --------- Polilínea / Polígono ----------\n",
     "    elif figura in [3,4]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            points.append((x,y))\n",
     "        elif event == cv.EVENT_MOUSEMOVE and len(points)>0:\n",
     "            temp = image.copy()\n",
-    "            preview_thickness = thickness if thickness>0 else 2\n",
+    "            preview_thickness = thickness if thickness>0 else 1\n",
     "            cv.polylines(temp, [np.array(points)], False, color, preview_thickness)\n",
     "            cv.line(temp, points[-1], (x,y), color, preview_thickness)\n",
     "            for p in points:\n",
@@ -124,29 +125,28 @@
     "            points = []\n",
     "            canvas[:] = image.copy()\n",
     "\n",
-    "# --- Asociar callback ---\n",
+    "\n",
     "cv.setMouseCallback(\"Editor\", draw)\n",
     "\n",
-    "# --- Preparar vídeo ---\n",
+    "# Vídeo\n",
     "height, width = canvas.shape[:2]\n",
     "fourcc = cv.VideoWriter_fourcc(*'XVID')\n",
-    "out = cv.VideoWriter('output/dibujo.avi', fourcc, 20.0, (width, height))\n",
+    "out = cv.VideoWriter('output/dibujo_1opcional.avi', fourcc, 20.0, (width, height))\n",
     "\n",
-    "print(\"Sliders: figura, color, grosor, relleno\")\n",
-    "print(\"0=Línea,1=Rect,2=Círculo,3=Polilínea,4=Polígono\")\n",
+    "print(\"Usa los sliders para cambiar figura, color, grosor y relleno.\")\n",
+    "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\")\n",
     "print(\"Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\")\n",
     "print(\"Tecla C = limpiar canvas\")\n",
-    "print(\"ESC = salir\")\n",
+    "print(\"ESC para salir.\")\n",
     "\n",
-    "# --- Loop principal ---\n",
+    "\n",
     "while True:\n",
     "    cv.imshow(\"Editor\", canvas)\n",
     "    out.write(canvas)\n",
     "    key = cv.waitKey(1) & 0xFF\n",
-    "    if key == 27:  # ESC\n",
+    "    if key == 27:\n",
     "        break\n",
-    "    elif key == ord('c'):  # limpiar\n",
-    "        # Restaurar todo\n",
+    "    elif key == ord('c'):\n",
     "        canvas[:] = original.copy()\n",
     "        image[:] = original.copy()\n",
     "        points = []\n",
