--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cb1f0733",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Usa los sliders para cambiar figura, color, grosor y relleno.\n",
-      "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\n",
+      "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse\n",
       "Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\n",
       "Tecla C = limpiar canvas\n",
       "ESC para salir.\n"
@@ -55,7 +55,7 @@
     "# Trackbars\n",
     "def nothing(x): pass\n",
     "\n",
-    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 4, nothing)\n",
+    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 5, nothing)\n",
     "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
@@ -78,7 +78,7 @@
     "        thickness = -1\n",
     "\n",
     "\n",
-    "    if figura in [0,1,2]:\n",
+    "    if figura in [0,1,2,5]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            drawing = True\n",
     "            ix, iy = x, y\n",
@@ -91,6 +91,10 @@
     "            elif figura == 2:\n",
     "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
     "                cv.circle(temp, (ix, iy), radius, color, thickness)\n",
+    "            elif figura == 5:\n",
+    "                center = ((ix + x) // 2, (iy + y) // 2)\n",
+    "                axes = (abs(x - ix) // 2, abs(y - iy) // 2)\n",
+    "                cv.ellipse(temp, center, axes, 0, 0, 360, color, thickness)\n",
     "            canvas[:] = temp # importante para guardar el proceso\n",
     "        elif event == cv.EVENT_LBUTTONUP:\n",
     "            drawing = False\n",
@@ -101,6 +105,10 @@
     "            elif figura == 2:\n",
     "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
     "                cv.circle(image, (ix, iy), radius, color, thickness)\n",
+    "            elif figura == 5:\n",
+    "                center = ((ix + x) // 2, (iy + y) // 2)\n",
+    "                axes = (abs(x - ix) // 2, abs(y - iy) // 2)\n",
+    "                cv.ellipse(image, center, axes, 0, 0, 360, color, thickness)\n",
     "            canvas[:] = image.copy()\n",
     "    elif figura in [3,4]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
@@ -134,7 +142,7 @@
     "out = cv.VideoWriter('output/dibujo_1opcional.avi', fourcc, 20.0, (width, height))\n",
     "\n",
     "print(\"Usa los sliders para cambiar figura, color, grosor y relleno.\")\n",
-    "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\")\n",
+    "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse\")\n",
     "print(\"Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\")\n",
     "print(\"Tecla C = limpiar canvas\")\n",
     "print(\"ESC para salir.\")\n",
