--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cb1f0733",
+   "execution_count": 17,
+   "id": "7ce0b57c",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
       "Usa los sliders para cambiar figura, color, grosor y relleno.\n",
       "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse\n",
       "Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\n",
-      "Tecla C = limpiar canvas\n",
+      "Tecla C = limpiar canvas, Z = deshacer, Y = rehacer\n",
       "ESC para salir.\n"
      ]
     }
@@ -49,6 +49,9 @@
     "ix, iy = -1, -1\n",
     "points = []  # para polilíneas y polígonos\n",
     "\n",
+    "# Historial para deshacer/rehacer\n",
+    "history = [image.copy()]\n",
+    "history_index = 0\n",
     "\n",
     "cv.namedWindow(\"Editor\", cv.WINDOW_AUTOSIZE)\n",
     "\n",
@@ -62,9 +65,8 @@
     "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 20, nothing)\n",
     "cv.createTrackbar(\"Relleno\", \"Editor\", 0, 1, nothing)\n",
     "\n",
-    "\n",
     "def draw(event, x, y, flags, param):\n",
-    "    global ix, iy, drawing, canvas, image, points\n",
+    "    global ix, iy, drawing, canvas, image, points, history, history_index\n",
     "\n",
     "    figura = cv.getTrackbarPos(\"Figura\", \"Editor\")\n",
     "    b = cv.getTrackbarPos(\"B\", \"Editor\")\n",
@@ -77,7 +79,7 @@
     "    if figura not in [0,3] and relleno == 1:\n",
     "        thickness = -1\n",
     "\n",
-    "\n",
+    "    # Líneas, Rectángulos, Círculos y Elipses\n",
     "    if figura in [0,1,2,5]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            drawing = True\n",
@@ -95,9 +97,10 @@
     "                center = ((ix + x) // 2, (iy + y) // 2)\n",
     "                axes = (abs(x - ix) // 2, abs(y - iy) // 2)\n",
     "                cv.ellipse(temp, center, axes, 0, 0, 360, color, thickness)\n",
-    "            canvas[:] = temp # importante para guardar el proceso\n",
+    "            canvas[:] = temp\n",
     "        elif event == cv.EVENT_LBUTTONUP:\n",
     "            drawing = False\n",
+    "            \n",
     "            if figura == 0:\n",
     "                cv.line(image, (ix, iy), (x, y), color, thickness)\n",
     "            elif figura == 1:\n",
@@ -110,6 +113,14 @@
     "                axes = (abs(x - ix) // 2, abs(y - iy) // 2)\n",
     "                cv.ellipse(image, center, axes, 0, 0, 360, color, thickness)\n",
     "            canvas[:] = image.copy()\n",
+    "\n",
+    "            # Guardar estado en el historial\n",
+    "            if history_index < len(history) - 1:\n",
+    "                history = history[:history_index+1]  # eliminar posibles \"redos\"\n",
+    "            history.append(image.copy())\n",
+    "            history_index += 1\n",
+    "\n",
+    "    # Polilíneas y polígonos\n",
     "    elif figura in [3,4]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            points.append((x,y))\n",
@@ -132,7 +143,11 @@
     "                    cv.polylines(image, [np.array(points)], True, color, thickness)\n",
     "            points = []\n",
     "            canvas[:] = image.copy()\n",
-    "\n",
+    "            # Guardar estado en el historial\n",
+    "            if history_index < len(history) - 1:\n",
+    "                history = history[:history_index+1]\n",
+    "            history.append(image.copy())\n",
+    "            history_index += 1\n",
     "\n",
     "cv.setMouseCallback(\"Editor\", draw)\n",
     "\n",
@@ -144,21 +159,32 @@
     "print(\"Usa los sliders para cambiar figura, color, grosor y relleno.\")\n",
     "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse\")\n",
     "print(\"Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\")\n",
-    "print(\"Tecla C = limpiar canvas\")\n",
+    "print(\"Tecla C = limpiar canvas, Z = deshacer, Y = rehacer\")\n",
     "print(\"ESC para salir.\")\n",
-    "\n",
     "\n",
     "while True:\n",
     "    cv.imshow(\"Editor\", canvas)\n",
     "    out.write(canvas)\n",
     "    key = cv.waitKey(1) & 0xFF\n",
-    "    if key == 27:\n",
+    "    if key == 27:  # ESC\n",
     "        break\n",
-    "    elif key == ord('c'):\n",
+    "    elif key == ord('c'):  # limpiar canvas\n",
     "        canvas[:] = original.copy()\n",
     "        image[:] = original.copy()\n",
     "        points = []\n",
     "        drawing = False\n",
+    "        history = [image.copy()]\n",
+    "        history_index = 0\n",
+    "    elif key == ord('z'):  # deshacer\n",
+    "        if history_index > 0:\n",
+    "            history_index -= 1\n",
+    "            image[:] = history[history_index].copy()\n",
+    "            canvas[:] = image.copy()\n",
+    "    elif key == ord('y'):  # rehacer\n",
+    "        if history_index < len(history) - 1:\n",
+    "            history_index += 1\n",
+    "            image[:] = history[history_index].copy()\n",
+    "            canvas[:] = image.copy()\n",
     "\n",
     "out.release()\n",
     "cv.destroyAllWindows()\n"
