--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "7ce0b57c",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Usa los sliders para cambiar figura, color, grosor y relleno.\n",
-      "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse\n",
+      "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse, 6=Mano alzada\n",
       "Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\n",
       "Tecla C = limpiar canvas, Z = deshacer, Y = rehacer\n",
       "ESC para salir.\n"
@@ -58,7 +58,7 @@
     "# Trackbars\n",
     "def nothing(x): pass\n",
     "\n",
-    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 5, nothing)\n",
+    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 6, nothing)\n",
     "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
@@ -76,14 +76,16 @@
     "    thickness = cv.getTrackbarPos(\"Grosor\", \"Editor\")\n",
     "    relleno = cv.getTrackbarPos(\"Relleno\", \"Editor\")\n",
     "\n",
-    "    if figura not in [0,3] and relleno == 1:\n",
+    "    if figura not in [0,3,6] and relleno == 1:\n",
     "        thickness = -1\n",
     "\n",
-    "    # Líneas, Rectángulos, Círculos y Elipses\n",
-    "    if figura in [0,1,2,5]:\n",
+    "    # Líneas, Rectángulos, Círculos, Elipses y Mano alzada\n",
+    "    if figura in [0,1,2,5,6]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            drawing = True\n",
     "            ix, iy = x, y\n",
+    "            if figura == 6:\n",
+    "                points = [(ix, iy)]\n",
     "        elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
     "            temp = image.copy()\n",
     "            if figura == 0:\n",
@@ -97,10 +99,12 @@
     "                center = ((ix + x) // 2, (iy + y) // 2)\n",
     "                axes = (abs(x - ix) // 2, abs(y - iy) // 2)\n",
     "                cv.ellipse(temp, center, axes, 0, 0, 360, color, thickness)\n",
+    "            elif figura == 6:\n",
+    "                cv.line(temp, points[-1], (x, y), color, thickness)\n",
+    "                points.append((x, y))\n",
     "            canvas[:] = temp\n",
     "        elif event == cv.EVENT_LBUTTONUP:\n",
     "            drawing = False\n",
-    "            \n",
     "            if figura == 0:\n",
     "                cv.line(image, (ix, iy), (x, y), color, thickness)\n",
     "            elif figura == 1:\n",
@@ -112,6 +116,10 @@
     "                center = ((ix + x) // 2, (iy + y) // 2)\n",
     "                axes = (abs(x - ix) // 2, abs(y - iy) // 2)\n",
     "                cv.ellipse(image, center, axes, 0, 0, 360, color, thickness)\n",
+    "            elif figura == 6:\n",
+    "                for i in range(1, len(points)):\n",
+    "                    cv.line(image, points[i-1], points[i], color, thickness)\n",
+    "                points = []\n",
     "            canvas[:] = image.copy()\n",
     "\n",
     "            # Guardar estado en el historial\n",
@@ -157,7 +165,7 @@
     "out = cv.VideoWriter('output/dibujo_1opcional.avi', fourcc, 20.0, (width, height))\n",
     "\n",
     "print(\"Usa los sliders para cambiar figura, color, grosor y relleno.\")\n",
-    "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse\")\n",
+    "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse, 6=Mano alzada\")\n",
     "print(\"Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\")\n",
     "print(\"Tecla C = limpiar canvas, Z = deshacer, Y = rehacer\")\n",
     "print(\"ESC para salir.\")\n",
