--- a/02/P02c.ipynb
+++ b/02/P02c.ipynb
@@ -153,6 +153,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5fcd9c0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "def apply_distortion(image, k1, k2, p1, p2, k3):\n",
+    "    h, w = image.shape[:2]\n",
+    "    # Vector de coeficientes de distorsión\n",
+    "    distCoeff = np.zeros((5,1), np.float64)\n",
+    "    distCoeff[0,0] = k1\n",
+    "    distCoeff[1,0] = k2\n",
+    "    distCoeff[2,0] = p1\n",
+    "    distCoeff[3,0] = p2\n",
+    "    distCoeff[4,0] = k3\n",
+    "\n",
+    "    # Matriz intrínseca simulada\n",
+    "    cam = np.eye(3, dtype=np.float32)\n",
+    "    cam[0,2] = w/2.0  # Centro x\n",
+    "    cam[1,2] = h/2.0  # Centro y\n",
+    "    cam[0,0] = 10.0   # Longitud focal x\n",
+    "    cam[1,1] = 10.0   # Longitud focal y\n",
+    "\n",
+    "    # Aplicar distorsión a la imagen\n",
+    "    distorted_img = cv2.undistort(image, cam, distCoeff)\n",
+    "    return distorted_img\n",
+    "\n",
+    "# Cargar imagen\n",
+    "image = cv2.imread('images/eii.png')\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se pudo cargar la imagen\")\n",
+    "\n",
+    "# Crear ventana y sliders\n",
+    "cv2.namedWindow(\"Distorsion interactiva\")\n",
+    "cv2.createTrackbar(\"k1\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"k2\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"p1\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"p2\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"k3\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "\n",
+    "while True:\n",
+    "    # Obtener valores de sliders\n",
+    "    k1 = (cv2.getTrackbarPos(\"k1\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    k2 = (cv2.getTrackbarPos(\"k2\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    p1 = (cv2.getTrackbarPos(\"p1\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    p2 = (cv2.getTrackbarPos(\"p2\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    k3 = (cv2.getTrackbarPos(\"k3\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "\n",
+    "    # Aplicar distorsión\n",
+    "    distorted = apply_distortion(image, k1, k2, p1, p2, k3)\n",
+    "\n",
+    "    cv2.imshow(\"Distorsion interactiva\", distorted)\n",
+    "    key = cv2.waitKey(30) & 0xFF\n",
+    "    if key == ord(\"q\") or key == 27:\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "09728aff",
    "metadata": {},
