Markdown style change

--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -13,7 +13,7 @@
    "id": "45a01d30",
    "metadata": {},
    "source": [
-    "1. Marcar el punto de giro con el ratón"
+    "## 1. Marcar el punto de giro con el ratón"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "id": "9902b41a",
    "metadata": {},
    "source": [
-    "2. Trasladar la imagen arrastrando con el ratón\n",
+    "## 2. Trasladar la imagen arrastrando con el ratón\n",
     "No ejecutar la primera va regulera"
    ]
   },
@@ -200,9 +200,7 @@
    "id": "570c3254",
    "metadata": {},
    "source": [
-    "## Codigo Unido 1 y 2 (tocho en uno)\n",
-    "\n",
-    "```python"
+    "## Codigo Unido 1 y 2 (tocho en una celda)"
    ]
   },
   {
@@ -344,8 +342,8 @@
    "id": "3ddfd1ac",
    "metadata": {},
    "source": [
-    "# Hacer la parte obligatoria sobre vídeo\n",
-    "## 1a. \n",
+    "## 3. Hacer la parte obligatoria sobre vídeo\n",
+    "###  1a. \n",
     "- Desarrollar una aplicación que lleve a cabo transformaciones de la imagen en tiempo real a través de una interfaz basada en trackbars o equivalente\n",
     "- Hacer traslaciones. Es necesario indicar la magnitud de la traslación en X y en Y.\n",
     "- Hacer rotaciones. Es necesario indicar el centro de giro y ángulo de giro.\n",
@@ -481,7 +479,7 @@
    "id": "cdd55776",
    "metadata": {},
    "source": [
-    "## 1b. \n",
+    "### 1b. \n",
     "- Dada una imagen trazar una ventana de proyección y proyectar la imagen."
    ]
   },
@@ -599,7 +597,7 @@
    "id": "f9798285",
    "metadata": {},
    "source": [
-    "4. Transformación afín con 3 puntos"
+    "## 4. Transformación afín con 3 puntos"
    ]
   },
   {
@@ -694,7 +692,7 @@
    "id": "1c4a9af7",
    "metadata": {},
    "source": [
-    "5. Calcular la imagen especular a partir de una imagen."
+    "## 5. Calcular la imagen especular a partir de una imagen."
    ]
   },
   {
@@ -792,7 +790,7 @@
    "id": "a2d12ea0",
    "metadata": {},
    "source": [
-    "6. Trazar una recta que será el eje de reflexión y “reflejar” la imagen."
+    "## 6. Trazar una recta que será el eje de reflexión y “reflejar” la imagen."
    ]
   },
   {
