--- a/02/P02c.ipynb
+++ b/02/P02c.ipynb
@@ -18,142 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6faf0d94",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nuevo centro óptico: (424, 188)\n",
-      "Nuevo centro óptico: (493, 260)\n",
-      "Nuevo centro óptico: (208, 262)\n",
-      "Nuevo centro óptico: (624, 117)\n",
-      "Nuevo centro óptico: (472, 246)\n",
-      "Nuevo centro óptico: (352, 162)\n",
-      "Nuevo centro óptico: (226, 180)\n",
-      "Nuevo centro óptico: (172, 310)\n",
-      "Nuevo centro óptico: (548, 351)\n",
-      "Nuevo centro óptico: (647, 379)\n",
-      "Nuevo centro óptico: (703, 256)\n",
-      "Nuevo centro óptico: (620, 213)\n",
-      "Nuevo centro óptico: (449, 184)\n",
-      "Nuevo centro óptico: (271, 155)\n",
-      "Nuevo centro óptico: (234, 95)\n",
-      "Nuevo centro óptico: (120, 145)\n",
-      "Nuevo centro óptico: (127, 271)\n",
-      "Nuevo centro óptico: (469, 315)\n",
-      "Nuevo centro óptico: (578, 244)\n",
-      "Nuevo centro óptico: (493, 136)\n",
-      "Nuevo centro óptico: (310, 147)\n",
-      "Nuevo centro óptico: (198, 157)\n",
-      "Nuevo centro óptico: (250, 315)\n",
-      "Nuevo centro óptico: (399, 380)\n",
-      "Nuevo centro óptico: (593, 345)\n",
-      "Nuevo centro óptico: (629, 219)\n",
-      "Nuevo centro óptico: (542, 129)\n",
-      "Nuevo centro óptico: (273, 124)\n",
-      "Nuevo centro óptico: (223, 164)\n",
-      "Nuevo centro óptico: (237, 185)\n",
-      "Nuevo centro óptico: (382, 178)\n",
-      "Nuevo centro óptico: (431, 232)\n",
-      "Nuevo centro óptico: (321, 343)\n",
-      "Nuevo centro óptico: (313, 88)\n",
-      "Nuevo centro óptico: (551, 142)\n",
-      "Nuevo centro óptico: (613, 242)\n",
-      "Nuevo centro óptico: (238, 291)\n",
-      "Nuevo centro óptico: (202, 247)\n",
-      "Nuevo centro óptico: (171, 105)\n",
-      "Nuevo centro óptico: (332, 76)\n",
-      "Nuevo centro óptico: (529, 98)\n",
-      "Nuevo centro óptico: (606, 155)\n",
-      "Nuevo centro óptico: (645, 254)\n",
-      "Nuevo centro óptico: (599, 320)\n",
-      "Nuevo centro óptico: (389, 383)\n",
-      "Nuevo centro óptico: (197, 320)\n",
-      "Nuevo centro óptico: (117, 193)\n",
-      "Nuevo centro óptico: (103, 112)\n",
-      "Nuevo centro óptico: (97, 70)\n",
-      "Nuevo centro óptico: (151, 43)\n",
-      "Nuevo centro óptico: (368, 146)\n",
-      "Nuevo centro óptico: (288, 201)\n",
-      "Nuevo centro óptico: (185, 230)\n",
-      "Nuevo centro óptico: (141, 301)\n",
-      "Nuevo centro óptico: (164, 142)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "# Cargar imagen\n",
-    "img = cv2.imread(\"images/cats.png\")\n",
-    "if img is None:\n",
-    "    raise FileNotFoundError(\"No se pudo cargar la imagen.\")\n",
-    "\n",
-    "h, w = img.shape[:2]\n",
-    "\n",
-    "# Centro inicial: centro de la imagen\n",
-    "cx, cy = w / 2, h / 2\n",
-    "\n",
-    "# Matriz intrínseca inicial\n",
-    "def get_K():\n",
-    "    return np.array([[w, 0, cx],\n",
-    "                     [0, w, cy],\n",
-    "                     [0, 0,  1]], dtype=np.float32)\n",
-    "\n",
-    "cv2.namedWindow(\"Distorsión\")\n",
-    "\n",
-    "# Sliders (centro en 50 = coef = 0)\n",
-    "cv2.createTrackbar(\"k1\", \"Distorsión\", 50, 100, lambda x: None)\n",
-    "cv2.createTrackbar(\"k2\", \"Distorsión\", 50, 100, lambda x: None)\n",
-    "cv2.createTrackbar(\"p1\", \"Distorsión\", 50, 100, lambda x: None)\n",
-    "cv2.createTrackbar(\"p2\", \"Distorsión\", 50, 100, lambda x: None)\n",
-    "cv2.createTrackbar(\"k3\", \"Distorsión\", 50, 100, lambda x: None)\n",
-    "\n",
-    "# Callback para cambiar centro óptico con clic\n",
-    "def mouse_click(event, x, y, flags, param):\n",
-    "    global cx, cy\n",
-    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        cx, cy = x, y\n",
-    "\n",
-    "cv2.setMouseCallback(\"Distorsión\", mouse_click)\n",
-    "\n",
-    "while True:\n",
-    "    # Obtener coeficientes de sliders\n",
-    "    k1 = (cv2.getTrackbarPos(\"k1\", \"Distorsión\") - 50) / 100.0\n",
-    "    k2 = (cv2.getTrackbarPos(\"k2\", \"Distorsión\") - 50) / 100.0\n",
-    "    p1 = (cv2.getTrackbarPos(\"p1\", \"Distorsión\") - 50) / 500.0\n",
-    "    p2 = (cv2.getTrackbarPos(\"p2\", \"Distorsión\") - 50) / 500.0\n",
-    "    k3 = (cv2.getTrackbarPos(\"k3\", \"Distorsión\") - 50) / 100.0\n",
-    "\n",
-    "    dist = np.array([k1, k2, p1, p2, k3], dtype=np.float32)\n",
-    "\n",
-    "    # Construir K con el centro óptico actual\n",
-    "    K = get_K()\n",
-    "\n",
-    "    # Aplicar distorsión\n",
-    "    map1, map2 = cv2.initUndistortRectifyMap(K, dist, None, K, (w, h), cv2.CV_32FC1)\n",
-    "    distorted = cv2.remap(img, map1, map2, interpolation=cv2.INTER_LINEAR)\n",
-    "\n",
-    "    # Dibujar punto del centro óptico\n",
-    "    display = distorted.copy()\n",
-    "    cv2.circle(display, (int(cx), int(cy)), 5, (0, 0, 255), -1)\n",
-    "\n",
-    "    cv2.imshow(\"Distorsión\", display)\n",
-    "\n",
-    "    # Salir con Q o ESC\n",
-    "    key = cv2.waitKey(30) & 0xFF\n",
-    "    if key in [ord(\"q\"), 27]:\n",
-    "        break\n",
-    "\n",
-    "cv2.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "5fcd9c0c",
    "metadata": {},
@@ -208,6 +72,95 @@
     "    distorted = apply_distortion(image, k1, k2, p1, p2, k3)\n",
     "\n",
     "    cv2.imshow(\"Distorsion interactiva\", distorted)\n",
+    "    key = cv2.waitKey(30) & 0xFF\n",
+    "    if key == ord(\"q\") or key == 27:\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3cb9173",
+   "metadata": {},
+   "source": [
+    "Funcionalidad de seleccionar el centro de distorsión con el ratón:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6faf0d94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Variables globales para el centro de distorsión\n",
+    "cx, cy = None, None\n",
+    "\n",
+    "def apply_distortion(image, k1, k2, p1, p2, k3, center=None):\n",
+    "    h, w = image.shape[:2]\n",
+    "    distCoeff = np.zeros((5,1), np.float64)\n",
+    "    distCoeff[0,0] = k1\n",
+    "    distCoeff[1,0] = k2\n",
+    "    distCoeff[2,0] = p1\n",
+    "    distCoeff[3,0] = p2\n",
+    "    distCoeff[4,0] = k3\n",
+    "\n",
+    "    # Matriz intrínseca simulada\n",
+    "    cam = np.eye(3, dtype=np.float32)\n",
+    "    if center is None:\n",
+    "        cam[0,2] = w/2.0  # Centro x\n",
+    "        cam[1,2] = h/2.0  # Centro y\n",
+    "    else:\n",
+    "        cam[0,2] = center[0]\n",
+    "        cam[1,2] = center[1]\n",
+    "\n",
+    "    cam[0,0] = 10.0\n",
+    "    cam[1,1] = 10.0\n",
+    "\n",
+    "    distorted_img = cv2.undistort(image, cam, distCoeff)\n",
+    "    return distorted_img\n",
+    "\n",
+    "# Callback del ratón para seleccionar el centro de distorsión\n",
+    "def mouse_click(event, x, y, flags, param):\n",
+    "    global cx, cy\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        cx, cy = x, y\n",
+    "\n",
+    "# Cargar imagen\n",
+    "image = cv2.imread('images/eii.png')\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se pudo cargar la imagen\")\n",
+    "\n",
+    "# Crear ventana y sliders\n",
+    "cv2.namedWindow(\"Distorsion interactiva\")\n",
+    "cv2.setMouseCallback(\"Distorsion interactiva\", mouse_click)\n",
+    "cv2.createTrackbar(\"k1\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"k2\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"p1\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"p2\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"k3\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
+    "\n",
+    "while True:\n",
+    "    # Obtener valores de sliders\n",
+    "    k1 = (cv2.getTrackbarPos(\"k1\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    k2 = (cv2.getTrackbarPos(\"k2\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    p1 = (cv2.getTrackbarPos(\"p1\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    p2 = (cv2.getTrackbarPos(\"p2\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "    k3 = (cv2.getTrackbarPos(\"k3\", \"Distorsion interactiva\") - 50) / 5000.0\n",
+    "\n",
+    "    # Aplicar distorsión usando el centro seleccionado (si hay)\n",
+    "    distorted = apply_distortion(image, k1, k2, p1, p2, k3, center=(cx, cy) if cx is not None else None)\n",
+    "\n",
+    "    # Dibujar un punto rojo donde está el centro de distorsión\n",
+    "    display = distorted.copy()\n",
+    "    if cx is not None and cy is not None:\n",
+    "        cv2.circle(display, (cx, cy), 5, (0,0,255), -1)\n",
+    "\n",
+    "    cv2.imshow(\"Distorsion interactiva\", display)\n",
     "    key = cv2.waitKey(30) & 0xFF\n",
     "    if key == ord(\"q\") or key == 27:\n",
     "        break\n",
