2 windows to reflection added

--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "61bcc904",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "6b48f639",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
     "            cv2.imshow(\"Reflexion\", display)\n",
     "\n",
     "def actualizar_reflexion(temp_point=None):\n",
-    "    \"\"\"Actualizar la imagen reflejada en tiempo real.\"\"\"\n",
+    "    \"\"\"Actualizar la imagen reflejada en tiempo real en otra ventana.\"\"\"\n",
     "    global clone, points\n",
     "\n",
     "    if len(points) == 0:\n",
@@ -865,12 +865,13 @@
     "    M_affine = get_affine_matrix(p1, p2)\n",
     "    reflected = cv2.warpAffine(clone, M_affine, (w, h))\n",
     "\n",
-    "    # Dibujar línea y puntos temporal\n",
-    "    display = reflected.copy()\n",
-    "    cv2.line(display, tuple(p1.astype(int)), tuple(p2.astype(int)), (255, 0, 0), 2)\n",
-    "    cv2.circle(display, tuple(p1.astype(int)), 5, (0, 0, 255), -1)\n",
-    "    cv2.circle(display, tuple(p2.astype(int)), 5, (0, 0, 255), -1)\n",
-    "    return display\n",
+    "    # Dibujar línea y puntos en la reflejada\n",
+    "    display_reflected = reflected.copy()\n",
+    "    cv2.line(display_reflected, tuple(p1.astype(int)), tuple(p2.astype(int)), (255, 0, 0), 2)\n",
+    "    cv2.circle(display_reflected, tuple(p1.astype(int)), 5, (0, 0, 255), -1)\n",
+    "    cv2.circle(display_reflected, tuple(p2.astype(int)), 5, (0, 0, 255), -1)\n",
+    "\n",
+    "    return display_reflected\n",
     "\n",
     "def get_affine_matrix(p1, p2):\n",
     "    dx, dy = p2 - p1\n",
@@ -899,18 +900,25 @@
     "\n",
     "def main():\n",
     "    global clone\n",
-    "    ruta = \"images/cats.png\"\n",
+    "    ruta = \"images/Gran_Canaria.jpg\"  # Cambia por tu imagen\n",
     "    clone = cv2.imread(ruta)\n",
     "    if clone is None:\n",
     "        raise FileNotFoundError(\"No se pudo cargar la imagen.\")\n",
     "\n",
+    "    # Dos ventanas: original y reflejada\n",
+    "    cv2.namedWindow(\"Original\")\n",
     "    cv2.namedWindow(\"Reflexion\")\n",
+    "\n",
+    "    # Mostrar la original fija\n",
+    "    cv2.imshow(\"Original\", clone)\n",
+    "\n",
     "    cv2.setMouseCallback(\"Reflexion\", mouse_callback)\n",
     "    cv2.imshow(\"Reflexion\", clone)\n",
     "\n",
     "    print(\"Haz clic en el primer punto, mueve el ratón para definir la recta, y haz clic en el segundo punto.\")\n",
     "    cv2.waitKey(0)\n",
     "    cv2.destroyAllWindows()\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
