--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9248afb0",
    "metadata": {},
    "outputs": [
@@ -27,24 +27,12 @@
       "👉 Usa los sliders para transformar la imagen.\n",
       "Pulsa ESC para salir.\n"
      ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window_w32.cpp:2570: error: (-27:Null pointer) NULL window: 'Transformaciones' in function 'cvGetTrackbarPos'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 37\u001b[39m\n\u001b[32m     33\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPulsa ESC para salir.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m     36\u001b[39m     \u001b[38;5;66;03m# --- Leer parámetros ---\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m37\u001b[39m     tx = \u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetTrackbarPos\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTx\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTransformaciones\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m - w//\u001b[32m2\u001b[39m\n\u001b[32m     38\u001b[39m     ty = cv.getTrackbarPos(\u001b[33m\"\u001b[39m\u001b[33mTy\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTransformaciones\u001b[39m\u001b[33m\"\u001b[39m) - h//\u001b[32m2\u001b[39m\n\u001b[32m     39\u001b[39m     angle = cv.getTrackbarPos(\u001b[33m\"\u001b[39m\u001b[33mAngulo\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTransformaciones\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31merror\u001b[39m: OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window_w32.cpp:2570: error: (-27:Null pointer) NULL window: 'Transformaciones' in function 'cvGetTrackbarPos'\n"
-     ]
     }
    ],
    "source": [
     "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
-    "# --- Cargar imagen ---\n",
     "image = cv.imread('images/cats.png')\n",
     "if image is None:\n",
     "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
@@ -55,28 +43,22 @@
     "def nothing(x):\n",
     "    pass\n",
     "\n",
-    "# --- Crear trackbars ---\n",
-    "# Traslación\n",
-    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)   # [-w/2, w/2]\n",
-    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)   # [-h/2, h/2]\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
     "\n",
-    "# Rotación\n",
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
     "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
     "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
     "\n",
-    "# Escalado\n",
     "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)  \n",
     "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
     "\n",
-    "# Modo escalado: 0 = no uniforme, 1 = uniforme\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
     "print(\"👉 Usa los sliders para transformar la imagen.\")\n",
     "print(\"Pulsa ESC para salir.\")\n",
     "\n",
     "while True:\n",
-    "    # --- Leer parámetros ---\n",
     "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
     "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
     "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
@@ -86,12 +68,10 @@
     "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
     "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
     "\n",
-    "    # --- Traslación ---\n",
     "    T = np.float32([[1, 0, tx],\n",
     "                    [0, 1, ty]])\n",
     "    img_T = cv.warpAffine(image, T, (w, h))\n",
     "\n",
-    "    # --- Rotación respecto a (cx, cy) ---\n",
     "    M_translate1 = np.float32([[1, 0, -cx],\n",
     "                               [0, 1, -cy]])\n",
     "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
@@ -104,34 +84,27 @@
     "    M_rot = M3 @ M2 @ M1\n",
     "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
     "\n",
-    "    # --- Escalado ---\n",
     "    if uniforme:\n",
-    "        # Usar solo EscalaX para ambos ejes\n",
     "        s = sx\n",
     "        S = np.float32([[s, 0, 0],\n",
     "                        [0, s, 0]])\n",
     "    else:\n",
-    "        # Escalado independiente\n",
     "        S = np.float32([[sx, 0, 0],\n",
     "                        [0, sy, 0]])\n",
     "\n",
     "    img_final = cv.warpAffine(img_R, S, (w, h))\n",
     "\n",
-    "    # --- Dibujar puntos de referencia con coordenadas ---\n",
     "    img_display = img_final.copy()\n",
     "    \n",
-    "    # Punto de rotación (rojo)\n",
     "    cv.circle(img_display, (cx, cy), 5, (0, 0, 255), -1)\n",
     "    cv.putText(img_display, f\"({cx},{cy})\", (cx + 10, cy - 10),\n",
     "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
     "    \n",
-    "    # Punto de traslación aplicado (verde)\n",
     "    tx_point, ty_point = w//2 + tx, h//2 + ty\n",
     "    cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
     "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point + 10, ty_point - 10),\n",
     "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
     "\n",
-    "    # Mostrar resultado\n",
     "    cv.imshow(\"Transformaciones\", img_display)\n",
     "\n",
     "    if cv.waitKey(1) & 0xFF == 27:\n",
